simple jQuery by using element/class/id selectors

--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Learn Jquery</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-
+    <p>click this text</p>
+    <button id="mybtn">button with id</button>
+    <button class="my-btn">button with class</button>
 
     <!-- jQuery CDN link -->
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
-    <script src="js/jQuery.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <!-- <script src="js/jQuery.js"></script> -->
     <script src="js/main.js"></script>
 </body>
 
