--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
     <p>click this text</p>
     <button id="mybtn">button with id</button>
     <button class="my-btn">button with class</button>
+    <hr>
+    <p>keyBoard events</p>
+    <input type="text" name="name" id="name">
+    <hr>
+    <p>form input</p>
+    <form action="" method="GET" id="myForm">
+        <input type="text" name="fname" id="fname">
+        <input type="submit" value="submit">
+    </form>
 
     <!-- jQuery CDN link -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
