some animation has been done

--- a/index.html
+++ b/index.html
@@ -9,18 +9,15 @@
 </head>
 
 <body>
-    <p>click this text</p>
-    <button id="mybtn">button with id</button>
-    <button class="my-btn">button with class</button>
-    <hr>
-    <p>keyBoard events</p>
-    <input type="text" name="name" id="name">
-    <hr>
-    <p>form input</p>
-    <form action="" method="GET" id="myForm">
-        <input type="text" name="fname" id="fname">
-        <input type="submit" value="submit">
-    </form>
+    <img src="images/blog-1.jpg" alt="" id="blog-1" width="300px" style="display: block; margin: 10px">
+    <button id="btn-hide">hide Image</button>
+    <button id="btn-show">show Image</button>
+    <button id="btn-toggle">Toggle Image</button>
+
+    <button id="btn-fadeout">fade Out</button>
+    <button id="btn-fadein">Fade In</button>
+    <button id="btn-fadetoggle">fade Toggle</button>
+    <button id="btn-fadeto">fade To</button>
 
     <!-- jQuery CDN link -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
