slide down/up/Toggle function added

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
     <button id="btn-fadetoggle">fade Toggle</button>
     <button id="btn-fadeto">fade To</button>
 
+    <button id="btn-slidedown">slide down</button>
+    <button id="btn-slideup">slide up</button>
+    <button id="btn-slidetoggle">slide toggle</button>
+
     <!-- jQuery CDN link -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- <script src="js/jQuery.js"></script> -->
