--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <img src="images/blog-1.jpg" alt="" id="blog-1" width="300px" style="display: block; margin: 10px">
+    <img src="images/blog-2.jpg" alt="" id="blog-2" width="300px" style="display: block; margin: 10px; position: relative">
     <button id="btn-hide">hide Image</button>
     <button id="btn-show">show Image</button>
     <button id="btn-toggle">Toggle Image</button>
@@ -22,6 +23,8 @@
     <button id="btn-slidedown">slide down</button>
     <button id="btn-slideup">slide up</button>
     <button id="btn-slidetoggle">slide toggle</button>
+
+    <button id="btn-animate">Animate</button>
 
     <!-- jQuery CDN link -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
