--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <body>
     <img src="images/blog-1.jpg" alt="" id="blog-1" width="300px" style="display: block; margin: 10px">
     <img src="images/blog-2.jpg" alt="" id="blog-2" width="300px" style="display: block; margin: 10px; position: relative">
+    <p id="myP">hello world</p>
+    <button id="set-text">set Text</button>
+    <button id="set-html">set HTML</button>
     <button id="btn-hide">hide Image</button>
     <button id="btn-show">show Image</button>
     <button id="btn-toggle">Toggle Image</button>
