get/set input value/attribute value

--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
     <button id="btn-slidetoggle">slide toggle</button>
 
     <button id="btn-animate">Animate</button>
+    <button id="btn-setInputValue">set Input value</button>
+    <button id="btn-setAttribute">set Attribute</button>
+    <button id="btn-setImage">set Image</button>
+    <input type="text" name="name" id="input-text" value="nezam" data-id="1">
 
     <!-- jQuery CDN link -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
