add/remove/toggle css class added

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <img src="images/blog-1.jpg" alt="" id="blog-1" width="300px" style="display: block; margin: 10px">
     <img src="images/blog-2.jpg" alt="" id="blog-2" width="300px" style="display: block; margin: 10px; position: relative">
-    <p id="myP">hello world</p>
+    <p id="myP" class="myclass2">hello world</p>
     <button id="set-text">set Text</button>
     <button id="set-html">set HTML</button>
     <button id="btn-hide">hide Image</button>
@@ -31,6 +31,13 @@
     <button id="btn-setInputValue">set Input value</button>
     <button id="btn-setAttribute">set Attribute</button>
     <button id="btn-setImage">set Image</button>
+
+    <!-- Css properties -->
+    <button id="btn-addClass">Add class</button>
+    <button id="btn-removeClass">Remove class</button>
+    <button id="btn-toggleClass">Toggle class</button>
+
+
     <input type="text" name="name" id="input-text" value="nezam" data-id="1">
 
     <!-- jQuery CDN link -->
